--- a/404.html
+++ b/404.html
@@ -9,7 +9,12 @@
 <h1><a href="../../../index.html">返回首页</a></h1>
 <hr>
 <img src="../../../图片/404.gif" width="300" height="300">
+<h4>https://fgr178707.github.io/fgr1787076 <b><a style="color: red;">到期时间:[永久有效] 请牢记此域名</a></b><br>
+    https://www.fgr178707.fun <b><a style="color: red;">到期时间:[2024-11-15 07:59:59]</a></b>
+</h4>
+
+
+
 </body>
-<h1><a style="color: red;">支付宝扫码，每天可以领取，实体店通用券，金额随机，最高99元</a></h1>
-<img src="../../../图片/扫码领红包.jpg" width="350">
+
 </html>
